--- a/style.css
+++ b/style.css
@@ -9,35 +9,43 @@ body{
 }
 
 nav{
-    position: fixed;
+    position: -webkit-sticky;
+    background:#fff;
     z-index: 100;
     height: 8vh;
     width: 96%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 30px;
+    padding: 5px 30px;
+    border-radius: 10px;
+    
 
 }
 
 .logo{
-    color: #fff;
-    font-weight: 600;
-    font-size: 16px;
+    color: #000;
+    font-weight: 900;
+    font-size: 20px;
+    
 }
 
 nav .nav-links ul{
-    display:flex;
+    display: flex;
+    
     flex-direction: row;
 }
 
 nav .nav-links ul li {
     padding: 0 4px;
+    
     list-style: none;
 }
 
 nav .nav-links ul li img{
-    transform: scale(0.45);
+    width: 250px;
+    
+    transform: scale(0.1);
 }
 
 section{
@@ -83,7 +91,7 @@ section{
     width: 1300px;
     height: 1300px;
     scale: 100%;
-    position: absolute;
+    position: fixed;
     left: 18vw;
     
     
